--- a/Frontend/HealthClubManagement/package.json
+++ b/Frontend/HealthClubManagement/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.16.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
